# amplikraken

./: .gitignore  README.md  requirements.txt  setup.cfg  setup.py
amplikraken/: core.py  fastq.py  kraken.py  run.py  utils.py
amplikraken/test/: testKrakenFunctions.py
envs/: kraken.sh  py311.yaml  test-confidence.py
scripts/: akget.py  akmerge.py  aktest.py  listSamples.py
taxon/: ete-demo.py  ete-update.py  lineage.py  lineage2.py
