[metadata]
author = Andrea Telatin
author_email = andrea.telatin@gmail.com
classifiers =
    Development Status :: 4 - Beta
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Topic :: Scientific/Engineering :: Bio-Informatics
    Programming Language :: Python :: 3 :: Only
description = Analyse metabarcoding datasets with Kraken2
download_url = https://github.com/quadram-institute-bioscience/amplikraken
keywords = cd-hit, clustering, reader
license = MIT
long_description = file: README.md
long_description_content_type = text/markdown
maintainer = Andrea Telatin
platforms = MacOS, Linux
maintainer_email = andrea.telatin@gmail.com
name = amplikraken
url = https://github.com/quadram-institute-bioscience/amplikraken
version = attr: version.get
python_requires = >3.6

[options]
zip_safe = True
include_package_data = True
packages = find:
install_requires =
    nextflowpy>=0.6.0
    pandas>=1.0
    biom-format>=2.1.7
    rich>=12.0.0
    importlib-resources>=1.4.0
    more-itertools>=8.4.0
    pytest>=5.4.3
    xopen>=1.0.1

[aliases]
test = pytest

[tool:pytest]
addopts =
    --doctest-modules
    --doctest-glob="*.md"
doctest_optionflags = NORMALIZE_WHITESPACE IGNORE_EXCEPTION_DETAIL ELLIPSIS ALLOW_UNICODE
norecursedirs = .eggs .git *.egg-info build .ropeproject .undodir
testpaths = amplikraken/test/test*.py

[pylint]
disable = redefined-builtin,R0915

[flake8]
ignore = E501 E741 E203 W503